For desktop, switch to grid layout for thundermail overview cards

--- a/sites/tb.pro/thundermail/index.html
+++ b/sites/tb.pro/thundermail/index.html
@@ -28,26 +28,28 @@ Thundermail offers you email hosting with the same values as Thunderbird. Enjoy 
 <section id="overview">
   <header>Meet Thundermail</header>
   <p>Email hosting from Thunderbird is here. Send/receive emails with a privacy protecting provider based in Germany and the latest mail standards like JMAP. Choose a Thundermail domain or bring your own. Look no further to power the open source email app you love.</p>
-  <div class="overview-card overview-card-1">
-    <div class="overview-image"></div>
-    <header>Based on Modern Standards</header>
-    <p>
-      A clean, user-friendly scheduling tool that respects your privacy, stays lightweight, and keeps improving with the help of an open community. No bloat, no barriers—just better booking.
-    </p>
-  </div>
-  <div class="overview-card overview-card-2">
-    <header>Hosted Securely in Germany</header>
-    <p>
-      Your emails are protected by strict EU privacy laws and hosted on infrastructure you can trust. With servers located in Germany, Thundermail prioritizes your privacy while ensuring reliable, fast delivery worldwide.
-    </p>
-    <div class="overview-image"></div>
-  </div>
-  <div class="overview-card overview-card-3">
-    <header>Customizable Domain</header>
-    <p>
-      Choose from @thundermail.com or @tb.pro addresses, or bring your own custom domain for a professional touch. Your email, your identity, your way to have full control over how you present yourself online.
-    </p>
-    <div class="overview-image"></div>
+  <div class="overview-card-container">
+    <div class="overview-card overview-card-1">
+      <div class="overview-image"></div>
+      <header>Based on Modern Standards</header>
+      <p>
+        A clean, user-friendly scheduling tool that respects your privacy, stays lightweight, and keeps improving with the help of an open community. No bloat, no barriers—just better booking.
+      </p>
+    </div>
+    <div class="overview-card overview-card-2">
+      <header>Hosted Securely in Germany</header>
+      <p>
+        Your emails are protected by strict EU privacy laws and hosted on infrastructure you can trust. With servers located in Germany, Thundermail prioritizes your privacy while ensuring reliable, fast delivery worldwide.
+      </p>
+      <div class="overview-image"></div>
+    </div>
+    <div class="overview-card overview-card-3">
+      <header>Customizable Domain</header>
+      <p>
+        Choose from @thundermail.com or @tb.pro addresses, or bring your own custom domain for a professional touch. Your email, your identity, your way to have full control over how you present yourself online.
+      </p>
+      <div class="overview-image"></div>
+    </div>
   </div>
 </section>
 {% endblock %}
