Rework spacing and width constraints

--- a/sites/tb.pro/appointment/index.html
+++ b/sites/tb.pro/appointment/index.html
@@ -25,33 +25,35 @@
 
 
 {% block overview %}
-<section id="overview">
-  <header>Meet Appointment</header>
-  <p>Instead of exchanging multiple messages to schedule a meeting, select your availability and let Appointment handle the rest. Appointment is powered by open standards and compatible with Google Calendar. You can now schedule like a pro.</p>
-  <div class="overview-card-container">
-    <div class="overview-card overview-card-1">
-      <div class="overview-image"></div>
-      <header>Simply Powerful</header>
-      <p>
-        An intuitive interface unlocks powerful capabilities. Select available times, send a customizable link, and track RSVPs real-time.
-      </p>
+<div class="top-level">
+  <section id="overview" class="primary-block">
+    <header>Meet Appointment</header>
+    <p>Instead of exchanging multiple messages to schedule a meeting, select your availability and let Appointment handle the rest. Appointment is powered by open standards and compatible with Google Calendar. You can now schedule like a pro.</p>
+    <div class="overview-card-container">
+      <div class="overview-card overview-card-1">
+        <div class="overview-image"></div>
+        <header>Simply Powerful</header>
+        <p>
+          An intuitive interface unlocks powerful capabilities. Select available times, send a customizable link, and track RSVPs real-time.
+        </p>
+      </div>
+      <div class="overview-card overview-card-2">
+        <header>Broadly Compatible</header>
+        <p>
+          Coordinate with contacts using Thunderbird, Google, Microsoft, and more. With unique CalDAV support, syncing is easy and everyone is invited.
+        </p>
+        <div class="overview-image"></div>
+      </div>
+      <div class="overview-card overview-card-3">
+        <header>Private, Open, Practical</header>
+        <p>
+          Appointment is private, open source, and integrates with third-party tools like Zoom to align with the needs of your work and personal life.
+        </p>
+        <div class="overview-image"></div>
+      </div>
     </div>
-    <div class="overview-card overview-card-2">
-      <header>Broadly Compatible</header>
-      <p>
-        Coordinate with contacts using Thunderbird, Google, Microsoft, and more. With unique CalDAV support, syncing is easy and everyone is invited.
-      </p>
-      <div class="overview-image"></div>
-    </div>
-    <div class="overview-card overview-card-3">
-      <header>Private, Open, Practical</header>
-      <p>
-        Appointment is private, open source, and integrates with third-party tools like Zoom to align with the needs of your work and personal life.
-      </p>
-      <div class="overview-image"></div>
-    </div>
-  </div>
-</section>
+  </section>
+</div>
 {% endblock %}
 
 
