--- a/sites/tb.pro/index.html
+++ b/sites/tb.pro/index.html
@@ -105,6 +105,7 @@
 
 {% from 'includes/macros/carousel.html' import carousel_item, carousel_footer %}
 {% block testimonials %}
+<!-- Should *not* be width-constrained via .top-level or .primary-block -->
   <div class="testimonials-background">
     <section id="testimonials">
       <header>What people are saying</header>
