--- a/sites/tb.pro/thundermail/index.html
+++ b/sites/tb.pro/thundermail/index.html
@@ -25,7 +25,8 @@ Thundermail offers you email hosting with the same values as Thunderbird. Enjoy 
 
 
 {% block overview %}
-<section id="overview">
+<div class="top-level">
+  <section id="overview" class="primary-block">
   <header>Meet Thundermail</header>
   <p>Email hosting from Thunderbird is here. Send/receive emails with a privacy protecting provider based in Germany and the latest mail standards like JMAP. Choose a Thundermail domain or bring your own. Look no further to power the open source email app you love.</p>
   <div class="overview-card-container">
@@ -52,6 +53,7 @@ Thundermail offers you email hosting with the same values as Thunderbird. Enjoy 
     </div>
   </div>
 </section>
+</div>
 {% endblock %}
 
 
