Update thundermail copy

--- a/sites/tb.pro/thundermail/index.html
+++ b/sites/tb.pro/thundermail/index.html
@@ -15,7 +15,7 @@
 
 <h1>Host Securely. Mail Confidently</h1>
 <p>
-Thundermail offers you email hosting with the same values as Thunderbird. Enjoy privacy, security, and freedom from client to inbox.
+  Thundermail offers you email hosting with the same values as Thunderbird. Enjoy privacy, security, and freedom from client to inbox.
 </p>
 
 {{ right_arrow_cta_button('Join Waitlist', '', 'cta-button') }}
@@ -28,13 +28,15 @@ Thundermail offers you email hosting with the same values as Thunderbird. Enjoy 
 <div class="top-level">
   <section id="overview" class="primary-block">
   <header>Meet Thundermail</header>
-  <p>Email hosting from Thunderbird is here. Send/receive emails with a privacy protecting provider based in Germany and the latest mail standards like JMAP. Choose a Thundermail domain or bring your own. Look no further to power the open source email app you love.</p>
+  <p>
+    Email hosting from Thunderbird is here. Send/receive emails with a privacy protecting provider based in Germany and the latest mail standards like JMAP. Choose a Thundermail domain or bring your own. Look no further to power the open source email app you love.
+  </p>
   <div class="overview-card-container">
     <div class="overview-card overview-card-1">
       <div class="overview-image"></div>
       <header>Based on Modern Standards</header>
       <p>
-        A clean, user-friendly scheduling tool that respects your privacy, stays lightweight, and keeps improving with the help of an open community. No bloat, no barriers—just better booking.
+        Experience faster, more efficient email with JMAP support alongside traditional IMAP and SMTP protocols. Built on Stalwart's modern, modular mail server architecture, Thundermail delivers performance and reliability without the bloat.
       </p>
     </div>
     <div class="overview-card overview-card-2">
@@ -64,19 +66,25 @@ Thundermail offers you email hosting with the same values as Thunderbird. Enjoy 
 <div class="reason">
   <div class="reason-content">
     <h3 class="reason-title">Open Source</h3>
-    <p>The technology powering Thunderbird Pro is freely licensed and open source, offering you transparency, security, and freedom. By subscribing you fund the development of our other open source tools which remain free-of-charge, free-of-ads, and free-of-data-harvesting.</p>
+    <p>
+      The technology powering Thunderbird Pro is freely licensed and open source, offering you transparency, security, and freedom. By subscribing you fund the development of our other open source tools which remain free-of-charge, free-of-ads, and free-of-data-harvesting
+    </p>
   </div>
 </div>
 <div class="reason">
   <div class="reason-content">
     <h3 class="reason-title">User Focused</h3>
-    <p>Thunderbird Pro is part of our mission to help you communicate, collaborate, and connect freely. The Thunderbird Desktop and Mobile apps remain the core of how we offer these benefits and your subscription helps us make them even better.</p>
+    <p>
+      Thunderbird Pro is part of our mission to help you communicate, collaborate, and connect freely. The Thunderbird Desktop and Mobile apps remain the core of how we offer these benefits and your subscription helps us make them even better.
+    </p>
   </div>
 </div>
 <div class="reason">
   <div class="reason-content">
     <h3 class="reason-title">Freedom Driven</h3>
-    <p>Money isn't our mission, it is the means to bring freedom and productivity to as many people as possible. Freely licensed software, open source code, and open standards liberate you and remain at the heart of Thunderbird.</p>
+    <p>
+      Money isn't our mission, it is the means to bring freedom and productivity to as many people as possible. Freely licensed software, open source code, and open standards liberate you and remain at the heart of Thunderbird.
+    </p>
   </div>
 </div>
 {% endblock %}
