--- a/sites/tb.pro/send/index.html
+++ b/sites/tb.pro/send/index.html
@@ -13,12 +13,12 @@
 {% block masthead %}
 <div class="product-logo"></div>
 
-<h1>Secure Files. Send Securely.</h1>
+<h1>{{ _('Secure Files. Send Securely.') }}</h1>
 <p>
-  Thunderbird Send makes sending large files safe and easy, with end-to-end encryption that keeps them secure in any recipient's inbox.
+  {{ _('Thunderbird Send makes sending large files safe and easy, with end-to-end encryption that keeps them secure in any recipient\'s inbox.') }}
 </p>
 
-{{ right_arrow_cta_button('Join Waitlist', '', 'cta-button') }}
+{{ right_arrow_cta_button(_('Join Waitlist'), '', 'cta-button') }}
 
 <div class="hero-image appointment"></div>
 {% endblock %}
@@ -40,16 +40,16 @@
         </p>
       </div>
       <div class="overview-card overview-card-2">
-        <header>Massive File Support</header>
+        <header>{{ _('Massive File Support') }}</header>
         <p>
-          Share files up to [size limit] without worrying about attachment restrictions. Whether it's high-resolution photos, design files, or project archives, Send handles what traditional email can't, while maintaining the familiar attachment experience in Thunderbird Desktop.
+          {{ _('Share files up to [size limit] without worrying about attachment restrictions. Whether it\'s high-resolution photos, design files, or project archives, Send handles what traditional email can\'t, while maintaining the familiar attachment experience in Thunderbird Desktop.') }}
         </p>
         <div class="overview-image"></div>
       </div>
       <div class="overview-card overview-card-3">
-        <header>Desktop App Integrated</header>
+        <header>{{ _('Desktop App Integrated') }}</header>
         <p>
-          Send large files directly from Thunderbird Desktop just like any other attachment. Recipients with Thunderbird see your files as natural email attachments, others can access them securely via a link.
+          {{ _('Send large files directly from Thunderbird Desktop just like any other attachment. Recipients with Thunderbird see your files as natural email attachments, others can access them securely via a link.') }}
         </p>
         <div class="overview-image"></div>
       </div>
@@ -59,28 +59,28 @@
 {% endblock %}
 
 {% block reasons %}
-<header>Made for You</header>
+<header>{{ _('Made for You') }}</header>
 <div class="reason">
   <div class="reason-content">
-    <h3 class="reason-title">Open Source</h3>
+    <h3 class="reason-title">{{ _('Open Source') }}</h3>
     <p>
-      The technology powering Thunderbird Pro is freely licensed and open source, offering you transparency, security, and freedom. By subscribing you fund the development of our other open source tools which remain free-of-charge, free-of-ads, and free-of-data-harvesting
+      {{ _('The technology powering Thunderbird Pro is freely licensed and open source, offering you transparency, security, and freedom. By subscribing you fund the development of our other open source tools which remain free-of-charge, free-of-ads, and free-of-data-harvesting') }}
     </p>
   </div>
 </div>
 <div class="reason">
   <div class="reason-content">
-    <h3 class="reason-title">User Focused</h3>
+    <h3 class="reason-title">{{ _('User Focused') }}</h3>
     <p>
-      Thunderbird Pro is part of our mission to help you communicate, collaborate, and connect freely. The Thunderbird Desktop and Mobile apps remain the core of how we offer these benefits and your subscription helps us make them even better.
+      {{ _('Thunderbird Pro is part of our mission to help you communicate, collaborate, and connect freely. The Thunderbird Desktop and Mobile apps remain the core of how we offer these benefits and your subscription helps us make them even better.') }}
     </p>
   </div>
 </div>
 <div class="reason">
   <div class="reason-content">
-    <h3 class="reason-title">Freedom Driven</h3>
+    <h3 class="reason-title">{{ _('Freedom Driven') }}</h3>
     <p>
-      Money isn't our mission, it is the means to bring freedom and productivity to as many people as possible. Freely licensed software, open source code, and open standards liberate you and remain at the heart of Thunderbird.
+      {{ _('Money isn\'t our mission, it is the means to bring freedom and productivity to as many people as possible. Freely licensed software, open source code, and open standards liberate you and remain at the heart of Thunderbird.') }}
     </p>
   </div>
 </div>
@@ -89,12 +89,12 @@
 {% block details %}
 <div class="subscription-header">
   <header>
-    Subscribe to Pro
+    {{ _('Subscribe to Pro') }}
   </header>
   <p>
-    Get Thundermail, Appointment, and Send in one simple subscription. You'll love the confidence, ease, and security these services add to Thunderbird. Thank you for supporting freedom.
+    {{ _('Get Thundermail, Appointment, and Send in one simple subscription. You\'ll love the confidence, ease, and security these services add to Thunderbird. Thank you for supporting freedom.') }}
   </p>
 </div>
 {% from 'includes/macros/subscription-plan.html' import subscription_plan %}
-{{ subscription_plan('Early Bird Plan', 'Our initial offering, ideal for most users', '9', 'per month,<br>paid annually', 'Join Waitlist', '30', '300', '15', '3') }}
+{{ subscription_plan(_('Early Bird Plan'), _('Our initial offering, ideal for most users'), '9', _('per month,<br>paid annually'), _('Join Waitlist'), '30', '300', '15', '3') }}
 {% endblock %}
