--- a/sites/tb.pro/thundermail/index.html
+++ b/sites/tb.pro/thundermail/index.html
@@ -20,7 +20,7 @@
 
 {{ right_arrow_cta_button(_('Join Waitlist'), '', 'cta-button') }}
 
-<div class="hero-image thundermail"></div>
+<div class="hero-image"></div>
 {% endblock %}
 
 
