--- a/sites/updates.thunderbird.net/thunderbird/140.0/nov25b/index.html
+++ b/sites/updates.thunderbird.net/thunderbird/140.0/nov25b/index.html
@@ -28,8 +28,8 @@
   <div id="header-gradient"></div>
   <div id="appeal-header">
     <header>
-      <h1 id="appeal-heading" aria-label="{{ _('Help Keep Thunderbird Alive!') }}">
-        {{ _('Help Keep <span>Thunderbird Alive</span>') }}
+      <h1 id="appeal-heading" aria-label="{{ _('Thank YOU. You Help Us Soar') }}">
+        {{ _('Thank YOU <span>You Help Us Soar</span>') }}
       </h1>
     </header>
     <aside id="illustration" aria-hidden="true">
